--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>js mini challenge</title>
+    <script src="Homework1.js"></script>
   </head>
   <body>
 
@@ -12,12 +13,6 @@
     Result:
     <span id="result">Result</span>
 
-    <script>
-      function addNums(){
-        var var1 = document.getElementById('var1').value;
-        var var2 = document.getElementById('var2').value;
-        document.getElementById('result').innerHTML = (parseInt(var1) + parseInt (var2));
-      }
-    </script>
+
   </body>
 </html>
