--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <script src="Homework1.js"></script>
   </head>
   <body>
-
-    Var 1: <input type="text" id="var1">
-    Var 2: <input type="text" id="var2">
-    <button id="add" onclick="addNums()">Click to Add</button>
-    <br>
-    Result:
-    <span id="result">Result</span>
+    <!-- Examples of adding two numbers together-->
+    <p>See if your number is greater or less than 100</p>
+    <input id="number" value=""
 
 
   </body>
