--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <script src="Homework1.js"></script>
   </head>
   <body>
-    <!-- Examples of adding two numbers together-->
-    <p>See if your number is greater or less than 100</p>
-    <input id="number" value=""
+    <input id="input" type="text" value="text"
 
 
   </body>
